kubernetes/apps/rook-ceph/rook-ceph/cluster/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ceph-managment
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Ceph (LAN)
    gethomepage.dev/icon: ceph.png
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/app: ceph
    gethomepage.dev/description: "LAN only | Rook Ceph management"
    gethomepage.dev/siteMonitor: "https://rook.int.gddnet.io"
    hajimari.io/icon: simple-icons:ceph
spec:
  hostnames:
    - rook.int.gddnet.io
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: rook-ceph-mgr-dashboard
          port: 7000
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ceph-rgw
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: s3
    gethomepage.dev/icon: s3.png
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/app: ceph
    gethomepage.dev/description: "LAN only | Rook Ceph s3 gateway"
    gethomepage.dev/siteMonitor: "https://rgw.int.gddnet.io"
    hajimari.io/icon: simple-icons:ceph
spec:
  hostnames:
    - rgw.int.gddnet.io
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: rook-ceph-rgw-ceph-objectstore
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
